			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

23-Mar-2005
~~~~~~~~~~~
Option in list view to show the full MIME-Type comment rather than
just "File" (Stephen Watson).

12-Mar-2005
~~~~~~~~~~~
When building the SendTo menu, allow nested subdirectories more than one
level deep (Jonatan Liljedahl).
Add 'Customise Menu...' to New submenu (Thomas Leonard, suggested by Jesse
Wagner).
Can specify panel item arguments and short cut when adding via SOAP
call (m0n5t3r). 
Also for pinboard items (and fixed bugs related to pinboard_add_with_args)
(Stephen Watson).

28-Feb-2005
~~~~~~~~~~~
Bugfix: Progress bar for count operation didn't finish when the count did
        (Stephen Watson, reported by Alexander Wagner).

24-Feb-2005
~~~~~~~~~~~
Look out for new line character when reading EA MIME type under Solaris 
(Stephen Watson).

13-Feb-2005
~~~~~~~~~~~
Added Estonian translation (Teet Tärno).

12-Feb-2005
~~~~~~~~~~~
Removed copy of GTK icon theme system. We now depend on GTK 2.4, which
includes it (Thomas Leonard).
Renamed 'Before' and 'After' in the bulk rename box to 'Old name' and
'New name', as they were causing problems for translators (reported by
Yuri Bongiorno).
Bugfix: The help for the "Set Type..." box wasn't translated (reported
	by Yuri Bongiorno).

09-Feb-2005
~~~~~~~~~~~
Defer re-generating a thumbnail until 5 seconds after the timestamp on 
the old one (Stephen Watson).
Bugfix: A file could be added many times to the thumbnail queue, causing
        the progress bar to behave strangely (Stephen Watson).
More changes for installing onto NFS mounted directory (Stephen Watson).

31-Jan-2005
~~~~~~~~~~~
Fixed a compiler warning by removing an unnecessary extra tooltips object
(Andreas Jochens).

30-Jan-2005
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

29-Jan-2005 (Release 2.2.0)
~~~~~~~~~~~
Added Finnish translation (Jari Rahkonen).

24-Jan-2005
~~~~~~~~~~~
Bugfix: More crashes due to Japanese characters; last patch didn't fix all