@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+28-Mar-2005
+~~~~~~~~~~~
+Simplify code to set minibuffer text to red on error (Dennis). Also set
+background to white, in case a theme's colour clashes with red (Thomas
+Leonard).
+
 23-Mar-2005
 ~~~~~~~~~~~
 Option in list view to show the full MIME-Type comment rather than
